fix: rmv file formats only use .json && rmv image generation endpoints
